feat: add Railway deployment config - Dockerfile, env variables, dynamic CORS